Revert: Meta Tags, HTMl package

--- a/web/index.html
+++ b/web/index.html
@@ -23,12 +23,12 @@
   <meta name="author" content="Charles Bon L. Chua">
   
   <!-- Open Graph Meta Tags -->
-  <!-- <meta property="og:type" content="website" /> -->
-  <!-- <meta property="og:url" content="https://chuacharlesbon.github.io/portfolio-chua/" /> -->
-  <!-- <meta property="og:site_name" content="Developer's Portfolio" /> -->
-  <!-- <meta property="og:title" content="Charles Bon L. Chua - PORTFOLIO" /> -->
-  <!-- <meta property="og:description" content="Developer Portfolio - Charles Bon Chua: Full Stack Developer; Frontend React and Flutter, Backend Nodejs" /> -->
-  <!-- <meta id="og_image" property="og:image" content="bg-image.png" /> -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://chuacharlesbon.github.io/portfolio-chua/" />
+  <meta property="og:site_name" content="Developer's Portfolio" />
+  <meta property="og:title" content="Charles Bon L. Chua - PORTFOLIO" />
+  <meta property="og:description" content="Developer Portfolio - Charles Bon Chua: Full Stack Developer; Frontend React and Flutter, Backend Nodejs" />
+  <meta id="og_image" property="og:image" content="bg-image.png" />
 
   <!-- Twitter Meta Tags -->
   <meta property="twitter:card" content="summary_large_image" />
