Updated: Meta Tags

--- a/web/index.html
+++ b/web/index.html
@@ -25,9 +25,9 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://chuacharlesbon.github.io/portfolio-chua/" />
-  <meta property="og:site_name" content="Developer's Portfolio" />
-  <meta property="og:title" content="Charles Bon L. Chua - PORTFOLIO" />
-  <meta property="og:description" content="Developer Portfolio - Charles Bon Chua: Full Stack Developer; Frontend React and Flutter, Backend Nodejs" />
+  <meta property="og:site_name" content="My Developer's Profile" />
+  <meta property="og:title" content="Charles Bon L. Chua" />
+  <meta property="og:description" content="Full Stack Developer; Frontend React and Flutter, Backend Nodejs" />
   <meta id="og_image" property="og:image" content="bg-image.png" />
 
   <!-- Twitter Meta Tags -->
@@ -76,5 +76,6 @@
   </script>
 
   <script defer src="js/change_favicon.js"></script>
+  <script defer src="js/change_meta.js"></script>
 </body>
 </html>
