--- a/web/index.html
+++ b/web/index.html
@@ -18,24 +18,25 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Developer Portfolio Charles Bon Chua Full Stack Developer Frontend React and Flutter Backend Nodejs"><!--search engine words-->
-  <meta name="keywords" content="capstone, developer, portfolio, full stack, developer, software engineer, charles bon chua">
-  <meta name="author" content="Charles Bon L. Chua">
+  <meta name="description" content="A new Flutter project." />
+  <!-- <meta name="description" content="Developer Portfolio Charles Bon Chua Full Stack Developer Frontend React and Flutter Backend Nodejs"> -->
+  <!-- <meta name="keywords" content="capstone, developer, portfolio, full stack, developer, software engineer, charles bon chua"> -->
+  <!-- <meta name="author" content="Charles Bon L. Chua"> -->
   
   <!-- Open Graph Meta Tags -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://chuacharlesbon.github.io/portfolio-chua/" />
-  <meta property="og:site_name" content="My Developer's Profile" />
-  <meta property="og:title" content="Charles Bon L. Chua" />
-  <meta property="og:description" content="Full Stack Developer; Frontend React and Flutter, Backend Nodejs" />
-  <meta id="og_image" property="og:image" content="bg-image.png" />
+  <!-- <meta property="og:type" content="website" /> -->
+  <!-- <meta property="og:url" content="https://chuacharlesbon.github.io/portfolio-chua/" /> -->
+  <!-- <meta property="og:site_name" content="My Developer's Profile" /> -->
+  <!-- <meta property="og:title" content="Charles Bon L. Chua" /> -->
+  <!-- <meta property="og:description" content="Full Stack Developer; Frontend React and Flutter, Backend Nodejs" /> -->
+  <!-- <meta id="og_image" property="og:image" content="bg-image.png" /> -->
 
   <!-- Twitter Meta Tags -->
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://chuacharlesbon.github.io/portfolio-chua/" />
-  <meta property="twitter:title" content="Charles Bon L. Chua - PORTFOLIO" />
-  <meta property="twitter:description" content="Developer Portfolio - Charles Bon Chua: Full Stack Developer; Frontend React and Flutter, Backend Nodejs" />
-  <meta property="twitter:image" content="bg-image.png" />
+  <!-- <meta property="twitter:card" content="summary_large_image" /> -->
+  <!-- <meta property="twitter:url" content="https://chuacharlesbon.github.io/portfolio-chua/" /> -->
+  <!-- <meta property="twitter:title" content="Charles Bon L. Chua - PORTFOLIO" /> -->
+  <!-- <meta property="twitter:description" content="Developer Portfolio - Charles Bon Chua: Full Stack Developer; Frontend React and Flutter, Backend Nodejs" /> -->
+  <!-- <meta property="twitter:image" content="bg-image.png" /> -->
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
