Updated: Meta Tags

--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,7 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project." />
+  <meta name="google-site-verification" content="2q6MKUNKjp8boUYGPzDllwDLGGQr5p_RVaoTJvWHoLM" />
   <!-- <meta name="description" content="Developer Portfolio Charles Bon Chua Full Stack Developer Frontend React and Flutter Backend Nodejs"> -->
   <!-- <meta name="keywords" content="capstone, developer, portfolio, full stack, developer, software engineer, charles bon chua"> -->
   <!-- <meta name="author" content="Charles Bon L. Chua"> -->
